# Emscripten-template

./: CMakeLists.txt  README.md
cmake/: conan.cmake
resources/shaders/: basic.fs  basic.vs  test2.vs
source/: Application.cpp  Application.hpp  Shader.cpp  Shader.hpp  emsc.cpp
